--- a/ML_ready_Data.ipynb
+++ b/ML_ready_Data.ipynb
@@ -36,30 +36,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "###################### Config ######################\n",
+    "\n",
     "time_stamp = 'Data/time_data_19873_train_valid_test.h5'\n",
     "channels = ['MDI','EIT','LASCO'] # , ,'LASCO_diff','MDI_diff',\n",
     "\n",
-    "dst_peak = -75\n",
+    "dst_peak = -100\n",
     "delay = 24\n",
     "time_res = 2\n",
     "Peak_width = 5\n",
-    "Peak_dis = 120\n",
+    "Peak_dis = 60\n",
     "F107_thres = [0, 500]\n",
     "SDO_flag = 1\n",
     "storm_idx = [15]\n",
     "var_idx = [0, 1, 2]\n",
-    "batch = 64\n",
-    "Resi_opt = 1000\n",
     "\n",
     "delay_range = 12*time_res\n",
     "delay_hour_clu = range(delay, delay+delay_range, time_res)\n",
     "SoHO_file = 'Res/Solar_data_19873.h5'\n",
-    "Omni_data = 'Data/1999-2010.pkl'\n",
+    "Omni_data = 'Data/1999-2012.pkl'\n",
     "hmi_file = 'Data/hmi_halloween2021.h5'\n",
     "\n",
     "Res_name = 'Res/Dst_'+\\\n",
@@ -88,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing value count     0/96441\n"
+      "Missing value count     0/113963\n"
      ]
     }
    ],
@@ -115,9 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<KeysViewHDF5 ['test_1927_dates', 'train_15645_dates', 'valid_2301_dates']>\n"
+     ]
+    }
+   ],
    "source": [
     "###################### SoHO data (X, run it once) ######################\n",
     "\n",
@@ -131,7 +138,7 @@
     "all_date = np.vstack([valid_date, train_date, test_date])\n",
     "X_all, Y_all = SoHO_read(channels, win_size=1)\n",
     "\n",
-    "with h5py.File('Res/Solar_data_19873.h5', 'w') as f:\n",
+    "with h5py.File(SoHO_file, 'w') as f:\n",
     "\n",
     "    f.create_dataset('X', data=X_all)\n",
     "    # f.create_dataset('Y', data=Y_all)\n",
@@ -141,28 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 14/19873 [00:00<02:27, 134.58it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Missing value count     0/96441\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 19873/19873 [02:27<00:00, 134.63it/s]\n"
+      "100%|██████████| 19873/19873 [02:53<00:00, 114.37it/s]\n"
      ]
     }
    ],
@@ -197,59 +190,39 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19873/19873 [00:00<00:00, 167779.25it/s]\n",
-      "90it [00:00, 3020.84it/s]\n",
-      "9it [00:00, 17.81it/s]"
+      "100%|██████████| 19873/19873 [00:00<00:00, 172412.63it/s]\n",
+      "65it [00:00, 2858.92it/s]\n",
+      "9it [00:00, 22.84it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start/end time 1999-04-15 20:00:00/1999-04-22 08:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "14it [00:00, 13.85it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "size of 1th storm should be 199/44\n",
+      "start/end time 1999-11-06 03:00:00/1999-11-22 17:00:00\n",
+      "size of 2th storm should be 122/117\n",
       "start/end time 2000-02-10 07:00:00/2000-02-20 12:00:00\n",
-      "start/end time 2000-04-14 19:00:00/2000-04-19 11:00:00\n"
+      "size of 3th storm should be 160/145\n",
+      "start/end time 2000-03-31 11:00:00/2000-04-13 19:00:00\n",
+      "size of 4th storm should be 139/116\n",
+      "start/end time 2000-05-23 01:00:00/2000-06-03 15:00:00\n",
+      "size of 5th storm should be 73/35\n",
+      "start/end time 2000-07-14 15:00:00/2000-07-20 18:00:00\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "19it [00:01, 12.36it/s]"
+      "15it [00:00, 22.91it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start/end time 2000-06-07 13:00:00/2000-06-14 01:00:00\n",
-      "start/end time 2000-06-25 02:00:00/2000-07-01 09:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24it [00:01, 14.49it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "size of 6th storm should be 133/133\n",
       "start/end time 2000-08-09 05:00:00/2000-08-20 07:00:00\n"
      ]
     },
@@ -257,56 +230,60 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "32it [00:02, 15.71it/s]"
+      "21it [00:00, 22.87it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start/end time 2001-05-06 00:00:00/2001-05-17 18:00:00\n",
-      "start/end time 2001-09-24 21:00:00/2001-10-08 08:00:00\n"
+      "size of 7th storm should be 99/46\n",
+      "start/end time 2000-11-25 22:00:00/2000-12-04 05:00:00\n",
+      "size of 8th storm should be 182/157\n",
+      "start/end time 2001-04-07 12:00:00/2001-04-22 16:00:00\n",
+      "size of 9th storm should be 182/157\n",
+      "start/end time 2001-04-07 12:00:00/2001-04-22 16:00:00\n",
+      "size of 10th storm should be 67/39\n",
+      "start/end time 2001-04-21 00:00:00/2001-04-26 14:00:00\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "37it [00:02, 14.17it/s]"
+      "24it [00:01, 22.83it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start/end time 2001-09-24 21:00:00/2001-10-08 08:00:00\n"
+      "size of 11th storm should be 46/47\n",
+      "start/end time 2001-08-16 16:00:00/2001-08-20 12:00:00\n",
+      "size of 12th storm should be 161/73\n",
+      "start/end time 2001-09-24 21:00:00/2001-10-08 08:00:00\n",
+      "size of 13th storm should be 161/73\n",
+      "start/end time 2001-09-24 21:00:00/2001-10-08 08:00:00\n",
+      "size of 14th storm should be 155/48\n",
+      "start/end time 2001-10-24 10:00:00/2001-11-06 08:00:00\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "39it [00:02, 12.81it/s]"
+      "30it [00:01, 23.02it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start/end time 2001-11-23 06:00:00/2001-12-01 14:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "41it [00:03, 10.35it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "size of 15th storm should be 155/48\n",
+      "start/end time 2001-10-24 10:00:00/2001-11-06 08:00:00\n",
+      "size of 16th storm should be 100/97\n",
+      "start/end time 2001-11-23 06:00:00/2001-12-01 14:00:00\n",
+      "size of 17th storm should be 87/85\n",
       "start/end time 2002-03-22 15:00:00/2002-03-29 21:00:00\n"
      ]
     },
@@ -314,57 +291,58 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "47it [00:03, 13.43it/s]"
+      "36it [00:01, 22.99it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start/end time 2002-07-31 23:00:00/2002-08-08 03:00:00\n"
+      "size of 18th storm should be 86/84\n",
+      "start/end time 2002-07-31 23:00:00/2002-08-08 03:00:00\n",
+      "size of 19th storm should be 102/53\n",
+      "start/end time 2002-08-17 22:00:00/2002-08-26 10:00:00\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "62it [00:04, 14.11it/s]"
+      "48it [00:02, 23.15it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "size of 20th storm should be 145/86\n",
+      "start/end time 2003-06-15 09:00:00/2003-06-27 12:00:00\n",
+      "size of 21th storm should be 194/123\n",
       "start/end time 2003-08-16 18:00:00/2003-09-01 23:00:00\n",
-      "start/end time 2003-10-24 02:00:00/2003-11-05 06:00:00\n"
+      "size of 22th storm should be 146/145\n",
+      "start/end time 2003-10-24 02:00:00/2003-11-05 06:00:00\n",
+      "size of 23th storm should be 272/92\n",
+      "start/end time 2003-11-08 04:00:00/2003-11-30 20:00:00\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "68it [00:04, 14.92it/s]"
+      "54it [00:02, 23.16it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start/end time 2004-07-15 22:00:00/2004-07-21 18:00:00\n",
-      "start/end time 2004-07-23 11:00:00/2004-08-07 18:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "78it [00:05, 15.95it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "size of 24th storm should be 183/182\n",
+      "start/end time 2004-07-23 11:00:00/2004-08-07 18:00:00\n",
+      "size of 25th storm should be 83/47\n",
+      "start/end time 2004-08-29 02:00:00/2004-09-05 01:00:00\n",
+      "size of 26th storm should be 166/41\n",
+      "start/end time 2004-11-06 20:00:00/2004-11-20 17:00:00\n",
+      "size of 27th storm should be 110/72\n",
       "start/end time 2005-05-06 21:00:00/2005-05-16 02:00:00\n"
      ]
     },
@@ -372,51 +350,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "81it [00:05, 14.69it/s]"
+      "63it [00:02, 23.14it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start/end time 2005-07-09 11:00:00/2005-07-17 18:00:00\n",
-      "start/end time 2005-08-23 08:00:00/2005-09-01 03:00:00\n"
+      "size of 28th storm should be 105/102\n",
+      "start/end time 2005-08-23 08:00:00/2005-09-01 03:00:00\n",
+      "size of 29th storm should be 133/29\n",
+      "start/end time 2005-08-30 12:00:00/2005-09-10 14:00:00\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "88it [00:06, 14.83it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start/end time 2006-04-07 10:00:00/2006-04-14 02:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "90it [00:06, 14.38it/s]\n",
-      " 10%|▉         | 2/21 [00:00<00:01, 17.76it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start/end time 2008-03-07 12:00:00/2008-03-20 10:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 21/21 [00:01<00:00, 16.84it/s]\n"
+      "65it [00:02, 23.04it/s]\n",
+      "100%|██████████| 29/29 [00:05<00:00,  5.29it/s]\n"
      ]
     },
     {
@@ -426,7 +378,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-5a01460803bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    101\u001b[0m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Y_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mdst_peak\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mall_date\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'X_ex'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_ex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time_ex'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdate_ex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Y_ex'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mY_ex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-d41508369dae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    101\u001b[0m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Y_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mdst_peak\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mall_date\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'X_ex'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_ex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time_ex'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdate_ex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Y_ex'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mY_ex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'X_ex' is not defined"
      ]
     }
@@ -492,21 +444,21 @@
     "            gap_t = dates[index_image[k+1]] - dates[index_image[k]]\n",
     "            gap[k] = gap_t.seconds//3600\n",
     "\n",
-    "        if ((gap > time_res).sum() <= 5) & (len(index_image) > 48):\n",
+    "        if ((gap > time_res*2).sum() <= 15) & (len(index_image) > 28):\n",
     "\n",
     "            sample_storm.append(index_image)\n",
-    "            # print('size of {}th storm should be {}/{}'\\\n",
-    "            #     .format(n, (idx[1]-idx[0])//time_res, \n",
-    "            #     len(index_image)))\n",
+    "            print('size of {}th storm should be {}/{}'\\\n",
+    "                .format(n, (idx[1]-idx[0])//time_res, \n",
+    "                len(index_image)))\n",
     "            \n",
-    "            date_plot = [dates[j] for j in index_image]\n",
-    "            plt.plot(date_plot, \\\n",
-    "                Y[index_image, 0], \n",
-    "                'r.')\n",
-    "            plt.xticks(rotation='vertical')\n",
+    "            # date_plot = [dates[j] for j in index_image]\n",
+    "            # plt.plot(date_plot, \\\n",
+    "            #     Y[index_image, 0], \n",
+    "            #     'r.')\n",
+    "            # plt.xticks(rotation='vertical')\n",
     "\n",
-    "            plt.savefig('Figs/sample_'+str(n)+'.jpg', dpi=300)\n",
-    "            plt.close()\n",
+    "            # plt.savefig('Figs/sample_'+str(n)+'.jpg', dpi=300)\n",
+    "            # plt.close()\n",
     "            print('start/end time {}/{}'.format(date_beg, date_end))\n",
     "            # print('end time', date_end)\n",
     "            \n",
@@ -515,7 +467,7 @@
     "            if n == 51:\n",
     "                break\n",
     "\n",
-    "with h5py.File(Res_name, 'r+') as f:\n",
+    "with h5py.File(Res_name, 'w') as f:\n",
     "\n",
     "    for v in ['X_ex', 'Y_ex', 'Y_reg_ex', \\\n",
     "        'time_ex', 'storm_num']:\n",
