--- a/ML_ready_Data.ipynb
+++ b/ML_ready_Data.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +49,9 @@
     "delay = 24\n",
     "time_res = 2\n",
     "Peak_width = 5\n",
-    "Peak_dis = 60\n",
+    "Peak_dis = 120\n",
     "F107_thres = [0, 500]\n",
-    "SDO_flag = 1\n",
+    "SDO_flag = 0\n",
     "storm_idx = [15]\n",
     "var_idx = [0, 1, 2]\n",
     "\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19873/19873 [02:53<00:00, 114.37it/s]\n"
+      "100%|██████████| 19873/19873 [02:53<00:00, 114.34it/s]\n"
      ]
     }
    ],
@@ -183,206 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 19873/19873 [00:00<00:00, 172412.63it/s]\n",
-      "65it [00:00, 2858.92it/s]\n",
-      "9it [00:00, 22.84it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of 1th storm should be 199/44\n",
-      "start/end time 1999-11-06 03:00:00/1999-11-22 17:00:00\n",
-      "size of 2th storm should be 122/117\n",
-      "start/end time 2000-02-10 07:00:00/2000-02-20 12:00:00\n",
-      "size of 3th storm should be 160/145\n",
-      "start/end time 2000-03-31 11:00:00/2000-04-13 19:00:00\n",
-      "size of 4th storm should be 139/116\n",
-      "start/end time 2000-05-23 01:00:00/2000-06-03 15:00:00\n",
-      "size of 5th storm should be 73/35\n",
-      "start/end time 2000-07-14 15:00:00/2000-07-20 18:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "15it [00:00, 22.91it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of 6th storm should be 133/133\n",
-      "start/end time 2000-08-09 05:00:00/2000-08-20 07:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "21it [00:00, 22.87it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of 7th storm should be 99/46\n",
-      "start/end time 2000-11-25 22:00:00/2000-12-04 05:00:00\n",
-      "size of 8th storm should be 182/157\n",
-      "start/end time 2001-04-07 12:00:00/2001-04-22 16:00:00\n",
-      "size of 9th storm should be 182/157\n",
-      "start/end time 2001-04-07 12:00:00/2001-04-22 16:00:00\n",
-      "size of 10th storm should be 67/39\n",
-      "start/end time 2001-04-21 00:00:00/2001-04-26 14:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24it [00:01, 22.83it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of 11th storm should be 46/47\n",
-      "start/end time 2001-08-16 16:00:00/2001-08-20 12:00:00\n",
-      "size of 12th storm should be 161/73\n",
-      "start/end time 2001-09-24 21:00:00/2001-10-08 08:00:00\n",
-      "size of 13th storm should be 161/73\n",
-      "start/end time 2001-09-24 21:00:00/2001-10-08 08:00:00\n",
-      "size of 14th storm should be 155/48\n",
-      "start/end time 2001-10-24 10:00:00/2001-11-06 08:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "30it [00:01, 23.02it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of 15th storm should be 155/48\n",
-      "start/end time 2001-10-24 10:00:00/2001-11-06 08:00:00\n",
-      "size of 16th storm should be 100/97\n",
-      "start/end time 2001-11-23 06:00:00/2001-12-01 14:00:00\n",
-      "size of 17th storm should be 87/85\n",
-      "start/end time 2002-03-22 15:00:00/2002-03-29 21:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "36it [00:01, 22.99it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of 18th storm should be 86/84\n",
-      "start/end time 2002-07-31 23:00:00/2002-08-08 03:00:00\n",
-      "size of 19th storm should be 102/53\n",
-      "start/end time 2002-08-17 22:00:00/2002-08-26 10:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "48it [00:02, 23.15it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of 20th storm should be 145/86\n",
-      "start/end time 2003-06-15 09:00:00/2003-06-27 12:00:00\n",
-      "size of 21th storm should be 194/123\n",
-      "start/end time 2003-08-16 18:00:00/2003-09-01 23:00:00\n",
-      "size of 22th storm should be 146/145\n",
-      "start/end time 2003-10-24 02:00:00/2003-11-05 06:00:00\n",
-      "size of 23th storm should be 272/92\n",
-      "start/end time 2003-11-08 04:00:00/2003-11-30 20:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "54it [00:02, 23.16it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of 24th storm should be 183/182\n",
-      "start/end time 2004-07-23 11:00:00/2004-08-07 18:00:00\n",
-      "size of 25th storm should be 83/47\n",
-      "start/end time 2004-08-29 02:00:00/2004-09-05 01:00:00\n",
-      "size of 26th storm should be 166/41\n",
-      "start/end time 2004-11-06 20:00:00/2004-11-20 17:00:00\n",
-      "size of 27th storm should be 110/72\n",
-      "start/end time 2005-05-06 21:00:00/2005-05-16 02:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "63it [00:02, 23.14it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of 28th storm should be 105/102\n",
-      "start/end time 2005-08-23 08:00:00/2005-09-01 03:00:00\n",
-      "size of 29th storm should be 133/29\n",
-      "start/end time 2005-08-30 12:00:00/2005-09-10 14:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "65it [00:02, 23.04it/s]\n",
-      "100%|██████████| 29/29 [00:05<00:00,  5.29it/s]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_ex' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-d41508369dae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    101\u001b[0m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Y_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mdst_peak\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mall_date\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'X_ex'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_ex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time_ex'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdate_ex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Y_ex'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mY_ex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_ex' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##########dst storm time selection(run it once) ###################\n",
     "\n",
@@ -414,13 +217,13 @@
     "                    # height=np.abs(args.Dst_sel),\n",
     "                    distance=Peak_dis,\n",
     "                    width=Peak_width)\n",
-    "idx = np.where(omni_data[peaks] <= dst_peak)[0]\n",
+    "idx = np.where(omni_data[peaks] <= dst_peak+20)[0]\n",
     "\n",
     "idx_clu = np.zeros([len(idx), 2])\n",
     "\n",
     "for i, idx_t in tqdm(enumerate(idx)):\n",
     "\n",
-    "    # print('peak {}:'.format(i), Omni_date[peaks[idx_t]])\n",
+    "    print('peak {}:'.format(i), omni_date[peaks[idx_t]])\n",
     "\n",
     "    idx_clu[i, 0] = np.where(\n",
     "        omni_data[:peaks[idx_t]] >= 0)[0][-1]-delay_range\n",
@@ -444,7 +247,7 @@
     "            gap_t = dates[index_image[k+1]] - dates[index_image[k]]\n",
     "            gap[k] = gap_t.seconds//3600\n",
     "\n",
-    "        if ((gap > time_res*2).sum() <= 15) & (len(index_image) > 28):\n",
+    "        if ((gap > time_res*3).sum() <= 15) & (len(index_image) > 30):\n",
     "\n",
     "            sample_storm.append(index_image)\n",
     "            print('size of {}th storm should be {}/{}'\\\n",
