--- a/Main.ipynb
+++ b/Main.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Dst Probabilistic Forecast\n",
     "\n",
-    "In this notebook, I first develop an class-balanced elastic-net-based CNN approach to model Dst Probabily during storm events and tested by an independent storm. The output is the Dst probability in next 24-48 hrs with a 2h time resolution. An emsemble method is developed for optimized the final predictions based on all 12 outputs within different samples. Please find the details in arxiv link:..."
+    "In this notebook, I first develop an class-balanced elastic-net-based CNN approach to model Dst Probabily during storm events and tested by an independent storm. The output is the Dst probability in next 24-48 hrs with a 2h time resolution. An emsemble method is developed for optimized the final predictions based on all 12 outputs within different samples. Please find the details in arxiv link:https://arxiv.org/abs/2203.11001 "
    ]
   },
   {
@@ -158,7 +158,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 45/45 [00:18<00:00,  2.49it/s]\n"
+      "100%|██████████| 45/45 [00:18<00:00,  2.44it/s]\n"
      ]
     },
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -273,26 +273,7 @@
      "output_type": "stream",
      "text": [
       "iter: 0\n",
-      "  epoch    train_loss    valid_loss    cp      lr      dur\n",
-      "-------  ------------  ------------  ----  ------  -------\n",
-      "      1      \u001b[36m354.4309\u001b[0m       \u001b[32m25.7555\u001b[0m     +  0.0500  23.8653\n",
-      "      2       \u001b[36m22.5625\u001b[0m       \u001b[32m22.0631\u001b[0m     +  0.0488  25.0916\n",
-      "      3       \u001b[36m21.5542\u001b[0m       \u001b[32m21.0324\u001b[0m     +  0.0452  24.5086\n",
-      "      4       \u001b[36m20.4919\u001b[0m       \u001b[32m20.0436\u001b[0m     +  0.0397  24.7141\n",
-      "      5       \u001b[36m19.5411\u001b[0m       \u001b[32m19.2430\u001b[0m     +  0.0327  24.5512\n",
-      "      6       \u001b[36m18.7722\u001b[0m       \u001b[32m18.5712\u001b[0m     +  0.0250  24.4418\n",
-      "      7       \u001b[36m17.9861\u001b[0m       \u001b[32m17.7929\u001b[0m     +  0.0173  24.4109\n",
-      "      8       \u001b[36m17.4895\u001b[0m       \u001b[32m17.4610\u001b[0m     +  0.0103  24.3903\n",
-      "      9       \u001b[36m17.2591\u001b[0m       \u001b[32m17.2601\u001b[0m     +  0.0048  24.5852\n",
-      "     10       \u001b[36m17.1106\u001b[0m       \u001b[32m17.1340\u001b[0m     +  0.0012  24.3701\n",
-      "     11       \u001b[36m17.0825\u001b[0m       \u001b[32m17.1192\u001b[0m     +  0.0000  24.6086\n",
-      "     12       34.0420       20.7185        0.0500  24.3515\n",
-      "     13       20.8335       19.0682        0.0497  24.1479\n",
-      "     14       20.0302       22.1359        0.0488  24.0939\n",
-      "     15       19.3793       18.2237        0.0473  24.0610\n",
-      "Stopping since valid_loss has not improved in the last 5 epochs.\n",
-      "Final test MCC/TSS: 0.3890414735754773/0.46833333333333327\n",
-      "Final train MCC/TSS: 0.032909997940224395/0.035249266862170225\n"
+      "Final test MCC/TSS: 0.3890414735754773/0.46833333333333327\n"
      ]
     },
     {
